# Tombo

./: .gitignore  API_REFERENCE.md  API_REFERENCE_COMPLETE.md  BUILD_COMPLETE.md  BUILD_COMPLETION_REPORT.md  BUILD_STATUS.txt  CAMERA_MICROPHONE_HARDWARE_GUIDE.md  CHATBOT_GUIDE.txt  COMPLETE_BUILD_SUMMARY.md  COMPLETE_DOCUMENTATION_SUMMARY.md  COMPLETE_README.md  COMPLETE_TEST_RESULTS.md  DELIVERY_SUMMARY.md  DOCUMENTATION_COMPLETE.txt  DOCUMENTATION_INDEX.md  FINAL_DELIVERABLES.md  FINAL_VERIFICATION.md  FINAL_VERIFICATION_REPORT.md  FULL_STATUS.md  HARDWARE_SOLUTION_SUMMARY.md  IMPLEMENTATION_PROGRESS_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION_COMPLETE.txt  INSTALL_ME.txt  LANGUAGE_ARCHITECTURE.md  MEMORY_MANAGEMENT.md  NEW_LIBRARIES_QUICK_START.md  PHASE1_COMPLETE.md  PHASE1_DELIVERY_CHECKLIST.md  PHASE1_FINAL_SUMMARY.md  PHASE1_LIBRARIES_COMPLETE.md  PHASE1_STATUS.txt  PHASE1_SUMMARY.md  PHASE1_VISUAL_SUMMARY.txt  PHASE2_LIBRARIES_COMPLETE.md  PHASE2_LIBRARIES_QUICK_START.md  PHASE2_SUMMARY.txt  PHASE3_LIBRARIES_QUICK_START.md  (+59 more)
docs/: API_REFERENCE_PHASE4.md  GETTING_STARTED.md  HARDWARE_ACCESS_GUIDE.md  HARDWARE_INDEX.md  HARDWARE_QUICK_REFERENCE.md  LANGUAGE_REFERENCE.md  PHASE4_DOCUMENTATION.md  README.md
examples/: health_dashboard_project.to  iot_dashboard_project.to  stdlib_demo.to  (+1 more)
src/: __init__.py  (+1 more)
tombo-rust/: Cargo.toml  README.md
tombo-rust/examples/: basic.to
tombo-rust/src/: ast.rs  cli.rs  domains.rs  interpreter.rs  main.rs  parser.rs  repl.rs
tombo-rust/src/lexer/: lexer.rs  mod.rs  token_types.rs
(+128 files in other folders)
